# embrio-rs

./: .editorconfig  .gitlab-ci.yml  .travis.yml  Cargo.toml  LICENSE-MIT  README.md
.github/: dependabot.yml
embrio/: Cargo.toml
embrio-async/: Cargo.toml
embrio-async/dehygiene/: Cargo.toml
embrio-async/dehygiene/src/: lib.rs
embrio-async/macros/: Cargo.toml
embrio-async/macros/src/: lib.rs
embrio-async/src/: lib.rs
embrio-async/tests/: no-prelude-leak.rs  smoke.rs
embrio-core/: Cargo.toml
embrio-core/src/: gpio.rs  lib.rs  timer.rs
embrio-core/src/io/: buf_read.rs  cursor.rs  mod.rs  read.rs  sink.rs  void.rs  write.rs
embrio-executor/: Cargo.toml  build.rs
embrio-executor/src/: context.rs  executor.rs  lib.rs  pin.rs  spawn.rs  waker.rs
embrio-executor/src/waker/: armv6m.rs  armv7m.rs  default.rs  mod.rs  thumbv6m.rs  thumbv7m.rs
embrio-io/: Cargo.toml
embrio-io/src/: lib.rs  sink.rs  write.rs
embrio-native/: Cargo.toml
embrio-native/src/: io.rs  lib.rs
embrio-nrf51/: Cargo.toml
embrio-nrf51/src/: lib.rs  timer.rs  uart.rs  zst_ref.rs
embrio-nrf51/src/gpio/: digital.rs  mod.rs  mode.rs  pin.rs
embrio-nrf51/src/timer/: mod.rs  timer0.rs  timer1.rs
embrio-util/: Cargo.toml
embrio-util/src/: fmt.rs  io.rs  lib.rs  macros.rs  utils.rs
embrio-util/src/future/: filter.rs  filter_map.rs  first.rs  join.rs  mod.rs  select.rs  traits.rs
embrio-util/src/io/: buf_reader.rs  close.rs  flush.rs  mod.rs  read_exact.rs  read_until.rs  write_all.rs
embrio/src/: lib.rs
examples/: Cargo.toml
examples/apps/echo/: Cargo.toml
examples/apps/echo/src/: lib.rs
examples/apps/hello/: Cargo.toml
examples/apps/hello/src/: lib.rs
examples/echo/: Cargo.toml  build.rs
examples/echo/src/: lib.rs  main.rs
examples/local/: Cargo.toml
examples/local/examples/: hello.rs
examples/microbit/: Cargo.toml
examples/microbit/examples/: microbit-hello.rs
examples/pca10031/: Cargo.toml  build.rs
examples/pca10031/.cargo/: config
examples/pca10031/examples/: hello.rs
examples/pca10031/native/: Cargo.toml
