[workspace]
members = [
  "embrio",
  "embrio-core",
  "embrio-executor",
  "embrio-native",
  "embrio-nrf51",
  "embrio-util",
  "examples/apps/hello",
  "examples/local",
  "examples/pca10031",
]

default-members = ["embrio"]

# https://github.com/japaric/bare-metal/pull/10
[patch.crates-io.bare-metal]
git = "https://github.com/Nemo157/bare-metal"
branch = "remove-old-feature"
