[package]
name = "embrio-async"
version = "0.1.0"
authors = ["Wim Looman <wim@nemo157.com>"]
edition = "2018"

[dependencies]
embrio-async-macros = { path = "macros" }
futures-core-preview = { version = "0.3.0-alpha.16", default-features = false }

[dev-dependencies]
futures-preview = "0.3.0-alpha.16"
pin-utils = "0.1.0-alpha.4"
ergo-pin = { git = "https://github.com/Nemo157/ergo-pin-rs" }
futures-test-preview = "0.3.0-alpha.16"
