[package]
name = "embrio-async"
version = "0.1.0"
authors = ["Wim Looman <wim@nemo157.com>"]
edition = "2018"

[dependencies]
embrio-async-macros = { path = "macros" }
futures-core = { version = "0.3.1", default-features = false }
pin-project-lite = "0.2.7"

[dev-dependencies]
futures = "0.3.1"
pin-utils = "0.1.0-alpha.4"
ergo-pin = { git = "https://github.com/Nemo157/ergo-pin-rs" }
futures-test = "0.3.1"
