cargo-features = ["edition"]

[package]
name = "embrio-executor"
version = "0.1.0"
authors = ["Wim Looman <wim@nemo157.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.5.3"
pin-utils = { version = "0.1.0-alpha.1", default-features = false }

[dependencies.futures-core-preview]
git = "https://github.com/rust-lang-nursery/futures-rs"
default-features = false

[dependencies.futures-util-preview]
git = "https://github.com/rust-lang-nursery/futures-rs"
default-features = false
features = ["nightly"]
