[package]
name = "embrio-executor"
version = "0.1.0"
authors = ["Wim Looman <wim@nemo157.com>"]
edition = "2018"

[dependencies.pin-utils]
version = "0.1.0-alpha.4"
default-features = false

[target.thumbv6m-none-eabi.dependencies]
cortex-m = { version = "0.5.8", features = ["const-fn"] }

[target.thumbv7m-none-eabi.dependencies]
cortex-m = { version = "0.5.8", features = ["const-fn"] }
