cargo-features = ["edition"]

[package]
name = "embrio-native"
version = "0.1.0"
authors = ["Wim Looman <wim@nemo157.com>"]
edition = "2018"

[dependencies]
embrio-core = { path = "../embrio-core" }

[dependencies.futures-core-preview]
git = "https://github.com/rust-lang-nursery/futures-rs"
default-features = false
