cargo-features = ["edition"]

[package]
name = "embrio-nrf51"
version = "0.1.0"
authors = ["Wim Looman <wim@nemo157.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.5.3"
nrf51 = "0.5.0"

[dependencies.embrio-core]
path = "../embrio-core"

[dependencies.embrio-executor]
path = "../embrio-executor"

[dependencies.futures-core-preview]
git = "https://github.com/rust-lang-nursery/futures-rs"
default-features = false

[dependencies.futures-util-preview]
git = "https://github.com/rust-lang-nursery/futures-rs"
default-features = false
features = ["nightly"]

[features]
default = []

# https://github.com/japaric/bare-metal/pull/10
[patch.crates-io.bare-metal]
git = "https://github.com/Nemo157/bare-metal"
branch = "remove-old-feature"
