[package]
name = "embrio-nrf51"
version = "0.1.0"
authors = ["Wim Looman <wim@nemo157.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.5.8"
nrf51 = "0.5.0"

[dependencies.embrio-core]
path = "../embrio-core"

[dependencies.embrio-executor]
path = "../embrio-executor"

[dependencies.futures-core-preview]
version = "0.3.0-alpha.14"
default-features = false
features = ["nightly", "cfg-target-has-atomic"]

[dependencies.futures-util-preview]
version = "0.3.0-alpha.14"
default-features = false
features = ["nightly", "cfg-target-has-atomic"]
