[package]
name = "embrio-nrf51"
version = "0.1.0"
authors = ["Wim Looman <wim@nemo157.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.7.0"
cortex-m-rt = "0.6.1"
nrf51 = "0.7.0"

[dependencies.embrio-core]
path = "../embrio-core"

[dependencies.embrio-executor]
path = "../embrio-executor"

[dependencies.futures-core]
version = "0.3.1"
default-features = false
features = ["unstable", "cfg-target-has-atomic"]

[dependencies.futures-util]
version = "0.3.1"
default-features = false
features = ["unstable", "cfg-target-has-atomic"]
