[package]
name = "embrio-util"
version = "0.1.0"
authors = ["Wim Looman <wim@nemo157.com>"]
edition = "2018"

[dependencies]
embrio-core = { path = "../embrio-core" }
memchr = { version = "2.0.1", default-features = false }

[dependencies.futures-core-preview]
version = "0.3.0-alpha.7"
default-features = false

[dependencies.futures-util-preview]
version = "0.3.0-alpha.7"
default-features = false
features = ["nightly"]

[features]
default = []
