[package]
name = "embrio-util"
version = "0.1.0"
authors = ["Wim Looman <wim@nemo157.com>"]
edition = "2018"

[dependencies]
embrio-core = { path = "../embrio-core" }
memchr = { version = "2.2.1", default-features = false }

[dependencies.futures-core]
version = "0.3.1"
default-features = false
features = ["unstable", "cfg-target-has-atomic"]

[dependencies.futures-util]
version = "0.3.1"
default-features = false
features = ["unstable", "cfg-target-has-atomic"]

[features]
default = []
