[package]
name = "embrio"
version = "0.1.0"
authors = ["Wim Looman <wim@nemo157.com>"]
edition = "2018"

[dependencies]
embrio-core = { path = "../embrio-core" }
embrio-executor = { path = "../embrio-executor", optional = true }
embrio-nrf51 = { path = "../embrio-nrf51", optional = true }
embrio-util = { path = "../embrio-util" }

[features]
default = []
executor = ["embrio-executor"]
nrf51 = ["embrio-nrf51"]
