[package]
name = "microbit"
version = "0.1.0"
authors = ["Raphael Nestler <raphael.nestler@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
hello = { path = "../apps/hello" }
cortex-m-rt = "0.6.11"
nrf51 = { version = "0.7.0", features = ["rt"] }
embrio = { path = "../../embrio" }
embrio-nrf51 = { path = "../../embrio-nrf51" }
panic-abort = "0.3.2"
