cargo-features = ["edition"]

[package]
name = "pca10031"
version = "0.0.0"
authors = ["Wim Looman <wim@nemo157.com>"]
edition = "2018"
publish = false

[dependencies]
hello = { path = "../apps/hello" }
cortex-m-rt = { version = "0.5.1" }
nrf51 = { version = "0.5.0", features = ["rt"] }
embrio = { path = "../../embrio" }
embrio-nrf51 = { path = "../../embrio-nrf51" }
panic-abort = { version = "0.2.0" }
